--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,14 @@
   <script type="text/javascript" id="MathJax-script" async
         src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
   </script>
+  <script>
+    MathJax = {
+      tex: {
+        inlineMath: [['$', '$']]
+      }
+    };
+  </script>
+
   </head>
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
