--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,15 +9,16 @@
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     {% include head-custom.html %}
 
-  <script type="text/javascript" id="MathJax-script" async
-        src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
-  </script>
-  <script> async
+  <script> 
     MathJax = {
       tex: {
         inlineMath: [['$', '$']]
       }
     };
+  </script>
+
+  <script type="text/javascript" id="MathJax-script" async
+        src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
   </script>
 
   </head>
